-ak/user 对namespace的add/del操作，只走namespace的service +updater/update time
