# agent/docs/swagger.yaml
@@ -10,17 +10,18 @@ definitions:
       alias:
         description: 显示名称
         type: string
-      create_time:
-        type: string
-      creator:
-        type: string
       password:
         description: 密码
         type: string
       status:
-        allOf:
-        - $ref: '#/definitions/pbaccesskey.AccessKeyStatus'
-        description: ak状态
+        description: '@cTags: binding:"required"'
+        type: integer
+      update_time:
+        description: 最近更新时间
+        type: string
+      updater:
+        description: 最近更新人
+        type: string
     required:
     - ak
     type: object
@@ -57,54 +58,23 @@ definitions:
       expired_in:
         description: token 过期时间
         type: integer
+      namespace_items:
+        description: 已授权namespace列表
+        items:
+          $ref: '#/definitions/pbnamespace.NamespaceAccessKeyInfo'
+        type: array
       token_type:
         description: token类型
         type: string
     type: object
-  pbaccesskey.AccessKeyNamespaceInfo:
-    properties:
-      ak:
-        description: access key
-        type: string
-      ak_alias:
-        description: access key alias
-        type: string
-      create_time:
-        description: 添加时间
-        type: string
-      creator:
-        description: 创建者
-        type: string
-      namespace:
-        description: 命名空间唯一标识
-        type: string
-    type: object
-  pbaccesskey.AccessKeyNamespaceListResponse:
-    properties:
-      items:
-        items:
-          $ref: '#/definitions/pbaccesskey.AccessKeyNamespaceInfo'
-        type: array
-    type: object
-  pbaccesskey.AccessKeyStatus:
-    enum:
-    - 0
-    - 1
-    - -1
-    type: integer
-    x-enum-varnames:
-    - AccessKeyStatus_AccessKeyStatusNil
-    - AccessKeyStatus_AccessKeyStatusEnable
-    - AccessKeyStatus_AccessKeyStatusDisable
   pbaccesskey.AccessKeyStatusChangeRequest:
     properties:
       ak:
         description: '@cTags: binding:"required"'
         type: string
       status:
-        allOf:
-        - $ref: '#/definitions/pbaccesskey.AccessKeyStatus'
         description: '@cTags: binding:"required"'
+        type: integer
     required:
     - ak
     - status
@@ -184,15 +154,15 @@ definitions:
       ak_alias:
         description: access key alias
         type: string
-      create_time:
-        description: 添加时间
-        type: string
-      creator:
-        description: 创建者
-        type: string
       namespace:
         description: '@cTags: binding:"required,min=3"'
         minLength: 3
+        type: string
+      update_time:
+        description: 最近更新时间
+        type: string
+      updater:
+        description: 最近更新人
         type: string
     required:
     - ak
@@ -225,12 +195,6 @@ definitions:
     type: object
   pbnamespace.NamespaceUserInfo:
     properties:
-      create_time:
-        description: 添加时间
-        type: string
-      creator:
-        description: 创建者
-        type: string
       namespace:
         description: '@cTags: binding:"required,min=3"'
         minLength: 3
@@ -240,6 +204,12 @@ definitions:
         type: string
       uid:
         description: '@cTags: binding:"required"'
+        type: string
+      update_time:
+        description: 最近更新时间
+        type: string
+      updater:
+        description: 最近更新人
         type: string
       user_name:
         description: 用户名称
@@ -290,7 +260,7 @@ definitions:
       namespace_items:
         description: 该用户下各namespace权限
         items:
-          $ref: '#/definitions/pbuser.UserNamespaceInfo'
+          $ref: '#/definitions/pbnamespace.NamespaceUserInfo'
         type: array
       role:
         description: 用户全局角色 普通成员/管理员
@@ -304,10 +274,6 @@ definitions:
     type: object
   pbuser.UserInfo:
     properties:
-      create_time:
-        type: string
-      creator:
-        type: string
       name:
         description: 用户名/显示名称
         type: string
@@ -318,11 +284,16 @@ definitions:
         description: 用户全局角色 普通成员/管理员
         type: string
       status:
-        allOf:
-        - $ref: '#/definitions/pbuser.UserStatus'
         description: 用户状态
+        type: integer
       uid:
         description: '@cTags: binding:"required"'
+        type: string
+      update_time:
+        description: 最近更新时间
+        type: string
+      updater:
+        description: 最近更新人
         type: string
     required:
     - password
@@ -335,44 +306,6 @@ definitions:
           $ref: '#/definitions/pbuser.UserInfo'
         type: array
     type: object
-  pbuser.UserNamespaceInfo:
-    properties:
-      create_time:
-        description: 添加时间
-        type: string
-      creator:
-        description: 创建者
-        type: string
-      namespace:
-        description: 命名空间唯一标识
-        type: string
-      role:
-        description: 角色，只读成员/空间管理员
-        type: string
-      uid:
-        description: 用户id
-        type: string
-      user_name:
-        description: 用户名称
-        type: string
-    type: object
-  pbuser.UserNamespaceListResponse:
-    properties:
-      items:
-        items:
-          $ref: '#/definitions/pbuser.UserNamespaceInfo'
-        type: array
-    type: object
-  pbuser.UserStatus:
-    enum:
-    - 0
-    - 1
-    - -1
-    type: integer
-    x-enum-varnames:
-    - UserStatus_UserStatusNil
-    - UserStatus_UserStatusEnable
-    - UserStatus_UserStatusDisable
 host: 127.0.0.1:7233
 info:
   contact: {}
@@ -465,7 +398,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pbaccesskey.AccessKeyNamespaceListResponse'
+            $ref: '#/definitions/pbnamespace.NamespaceAccessKeyListResponse'
       security:
       - ApiKeyAuth: []
       summary: accessKey namespace 列表
@@ -994,7 +927,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pbuser.UserNamespaceListResponse'
+            $ref: '#/definitions/pbnamespace.NamespaceAccessKeyListResponse'
       security:
       - ApiKeyAuth: []
       summary: user namespace 列表
