# agent/venus/server/local/namespace.go
@@ -2,6 +2,9 @@ package local
 
 import (
 	"context"
+	"time"
+
+	"github.com/no-mole/venus/agent/venus/auth"
 
 	"github.com/no-mole/venus/agent/codec"
 	"github.com/no-mole/venus/agent/errors"
@@ -10,7 +13,13 @@ import (
 	"google.golang.org/protobuf/types/known/emptypb"
 )
 
-func (l *Local) NamespaceAdd(_ context.Context, item *pbnamespace.NamespaceItem) (*pbnamespace.NamespaceItem, error) {
+func (l *Local) NamespaceAdd(ctx context.Context, item *pbnamespace.NamespaceItem) (*pbnamespace.NamespaceItem, error) {
+	claims, has := auth.FromContextClaims(ctx)
+	if !has {
+		return &pbnamespace.NamespaceItem{}, errors.ErrorGrpcNotLogin
+	}
+	item.Creator = claims.UniqueID
+	item.CreateTime = time.Now().Format(timeFormat)
 	data, err := codec.Encode(structs.NamespaceAddRequestType, item)
 	if err != nil {
 		return item, errors.ToGrpcError(err)
@@ -35,6 +44,12 @@ func (l *Local) NamespaceDel(_ context.Context, req *pbnamespace.NamespaceDelReq
 }
 
 func (l *Local) NamespaceAddUser(ctx context.Context, info *pbnamespace.NamespaceUserInfo) (*emptypb.Empty, error) {
+	claims, has := auth.FromContextClaims(ctx)
+	if !has {
+		return &emptypb.Empty{}, errors.ErrorGrpcNotLogin
+	}
+	info.Updater = claims.UniqueID
+	info.UpdateTime = time.Now().Format(timeFormat)
 	userInfo, err := l.UserLoad(ctx, info.Uid)
 	if err != nil {
 		return &emptypb.Empty{}, err
@@ -68,6 +83,12 @@ func (l *Local) NamespaceAddAccessKey(ctx context.Context, info *pbnamespace.Nam
 	if err != nil {
 		return &emptypb.Empty{}, err
 	}
+	claims, has := auth.FromContextClaims(ctx)
+	if !has {
+		return &emptypb.Empty{}, errors.ErrorGrpcNotLogin
+	}
+	info.Updater = claims.UniqueID
+	info.UpdateTime = time.Now().Format(timeFormat)
 	info.AkAlias = akInfo.Alias
 	data, err := codec.Encode(structs.NamespaceAddAccessKeyRequestType, info)
 	if err != nil {
